--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,8 +47,7 @@
     <script src="{{ asset('assets/angular.min.js') }}"></script>
     <script src="{{ asset('assets/jquery.min.js') }}"></script>
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('js/getJson.js') }}"></script>
-
+    <script src="{{ asset('js/regimeModule.js') }}"></script>
 {% endblock %}
 {% endblock %}
 </html>
