--- a/app/Resources/style/regimeStyle.css
+++ b/app/Resources/style/regimeStyle.css
@@ -50,17 +50,11 @@
     font-family: Oswald;
 }
 
-.post_detail
-{
-
-}
-
 .post_detail h2{
-    font-size: 20px;
+    font-size: 23px;
     margin-bottom: 10px;
+    font-family:Oswald;
 }
-
-.post_detail h2 a{}
 
 .floatleft
 {
