Added comments style, more/less function to comments, new controller action

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="{{ asset('fonts/glyphicons-haflings-regular.ttf') }}">
         <link rel="stylesheet" href="{{ asset('fonts/Oswald-Light.ttf') }}">
         <link rel="stylesheet" href="{{ asset('css/regimeStyle.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/commentsStyle.css') }}">
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
@@ -48,6 +49,7 @@
     <script src="{{ asset('assets/jquery.min.js') }}"></script>
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
     <script src="{{ asset('js/regimeModule.js') }}"></script>
+    <script src="{{ asset('js/main.js') }}"></script>
 {% endblock %}
 {% endblock %}
 </html>
