--- a/src/AppBundle/Resources/views/Home/showComment.html.twig
+++ b/src/AppBundle/Resources/views/Home/showComment.html.twig
@@ -1,9 +1,13 @@
 {% block content %}
-
     {% for comment in comments %}
-        <div id="comment">
-            {{ comment.user.username }}: {{ comment.comment }}
+        <div id="comment" class="row">
+            <div class="col-sm-1">
 
+            </div>
+            <div class="col-md-11">
+                <a class="commentAuthor" href="{{ path('app.showProfile',{'id':comment.user.id}) }}"> {{ comment.user.username }} </a>
+                <p class="comment more">{{ comment.comment }}</p>
+            </div>
             {% if comment.subComments is not null %}
                 <ul>
                     {% include "AppBundle:Home:showComment.html.twig" with {'comments': comment.subComments} %}
