--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="{{ asset('fonts/Oswald-Light.ttf') }}">
         <link rel="stylesheet" href="{{ asset('css/regimeStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/commentsStyle.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/regimeShowStyle.css') }}">
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
@@ -50,6 +51,7 @@
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
     <script src="{{ asset('js/regimeModule.js') }}"></script>
     <script src="{{ asset('js/main.js') }}"></script>
+    <script src="{{ asset('js/ratings.js') }}"></script>
 {% endblock %}
 {% endblock %}
 </html>
