--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="{{ asset('css/regimeStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/commentsStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/regimeShowStyle.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/homePageNew.css') }}">
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
@@ -52,6 +53,8 @@
     <script src="{{ asset('js/regimeModule.js') }}"></script>
     <script src="{{ asset('js/commentLengthControl.js') }}"></script>
     <script src="{{ asset('js/ratings.js') }}"></script>
+    <script src="{{ asset('js/smoothscroll.js') }}"></script>
+    <script src="{{ asset('js/wow.min.js') }}"></script>
 {% endblock %}
 {% endblock %}
 </html>
