Infinite scroll regimes

--- a/app/Resources/views/base2.html.twig
+++ b/app/Resources/views/base2.html.twig
@@ -23,10 +23,10 @@
 
                 {% endblock %}
 
-
 {% block javascripts %}
-    <script src="{{ asset('assets/angular.min.js') }}"></script>
     <script src="{{ asset('assets/jquery.min.js') }}"></script>
+    <script src="{{ asset('assets/angular.min.js') }}"></script>
+    <script src="{{ asset('assets/ng-infinite-scroll.js') }}"></script>
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
     <script src="{{ asset('js/smoothscroll.js') }}"></script>
     <script src="{{ asset('js/wow.min.js') }}"></script>
