home page change,added minLimit to description

--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,6 +1,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block content %}
+    {{ form_errors(form) }}
     {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
     <div class="row">
         <div class="col-md-2"></div>
