--- a/app/Resources/views/base2.html.twig
+++ b/app/Resources/views/base2.html.twig
@@ -8,9 +8,12 @@
 
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/bootstrap.min.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/animate.min.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/owl.theme.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/owl.carousel.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/regimeStyle.css') }}"/>
-
+        <link rel="stylesheet" href="{{ asset('css/pageStyle.css') }}"/>
     {% endblock %}
 
     {% block canonical_meta %}{% endblock %}
@@ -25,14 +28,24 @@
 
 {% block javascripts %}
     <script src="{{ asset('assets/jquery.min.js') }}"></script>
+    <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
     <script src="{{ asset('assets/angular.min.js') }}"></script>
     <script src="{{ asset('assets/ng-infinite-scroll.js') }}"></script>
-    <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
     <script src="{{ asset('js/smoothscroll.js') }}"></script>
-    <script src="{{ asset('js/wow.min.js') }}"></script>
+    <script src="{{ asset('js/jquery.nav.js') }}"></script>
+    <script src="{{ asset('js/jquery.parallax.js') }}"></script>
     <script src="{{ asset('js/owl.carousel.min.js') }}"></script>
+    <script src="{{ asset('js/wow.min.js') }}"></script>
     <script src="{{ asset('js/isotope.min.js') }}"></script>
+    <script src="{{ asset('js/counter.js') }}"></script>
+    <script src="{{ asset('js/custom.js') }}"></script>
+    <script src="{{ asset('js/commentLengthControl.js') }}"></script>
     <script src="{{ asset('js/regimeModule.js') }}"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="popover"]').popover();
+        });
+    </script>
 {% endblock %}
 
 </html>
