--- a/src/AppBundle/Resources/views/Home/queryRegime.html.twig
+++ b/src/AppBundle/Resources/views/Home/queryRegime.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base3.html.twig' %}
 
 {% block content %}
     <h1>{{ regime.title }}</h1>
@@ -51,6 +51,7 @@
             {{ form_widget(formRate.rating.2, {'attr':{'class':'radio_item'}}) }}
             {{ form_widget(formRate.rating.1, {'attr':{'class':'radio_item'}}) }}
             {{ form_widget(formRate.rating.0, {'attr':{'class':'radio_item'}}) }}
+
             {% for i in [4,3,2,1,0] %}
                 <label id="{{ i+1 }}" class="label_item {% if regime.rating > i %} coloredStar {% endif %}" for="form_rating_{{ i }}"> <span>&#9734</span> </label>
             {% endfor %}
