--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,24 +1,35 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
-
 {% trans_default_domain 'FOSUserBundle' %}
 
+{% extends "@User/layout.html.twig" %}
+
 {% block fos_user_content %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="form">
+        {% if error %}
+            <div class="alert alert-danger alert-dissmissible" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+        <ul class="tab-group">
+            <li class="tab"><a href="/register">Registruotis</a></li>
+            <li class="tab active"><a>Prisijungti</a></li>
+        </ul>
+        <form action="{{ path("fos_user_security_check") }}" method="post">
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-    <form action="{{ path("fos_user_security_check") }}" method="post">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+            <div class="field-wrap">
+                <label for="username">{{ 'security.login.username'|trans }} </label>
+                <input autocomplete="off" type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+            </div>
 
-        <label for="username">{{ 'security.login.username'|trans }}</label>
-        <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+            <div class="field-wrap">
+                <label for="password">{{ 'security.login.password'|trans }}</label>
+                <input autocomplete="off" type="password" id="password" name="_password" required="required" />
+            </div>
 
-        <label for="password">{{ 'security.login.password'|trans }}</label>
-        <input class="form-control" type="password" id="password" name="_password" required="required" />
+            <div style="display:inline-block;" class="field-wrap">
+                <p style="color:white;" for="remember_me">{{ 'security.login.remember_me'|trans }}</p>
+                <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+            </div>
 
-        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-
-        <input class="form-control" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-    </form>
+            <input class="button button-block" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+        </form>
+    </div>
 {% endblock fos_user_content %}
