--- a/app/Resources/style/registerStyle.css
+++ b/app/Resources/style/registerStyle.css
@@ -1,3 +1,9 @@
+@font-face
+{
+    font-family: Oswald;
+    src: url(../fonts/Oswald-Light.ttf)
+}
+
 *, *:before, *:after {
     box-sizing: border-box;
 }
@@ -13,12 +19,12 @@ body {
 
 a {
     text-decoration: none;
-    color: #1ab188;
+    color: #fcbe07;
     -webkit-transition: .5s ease;
     transition: .5s ease;
 }
 a:hover {
-    color: #179b77;
+    color: #fffa3d;
 }
 
 .form {
@@ -44,8 +50,8 @@ a:hover {
     display: block;
     text-decoration: none;
     padding: 15px;
-    background: rgba(160, 179, 176, 0.25);
-    color: #a0b3b0;
+    background: #fcbe07;
+    color: #ffffff;
     font-size: 20px;
     float: left;
     width: 50%;
@@ -55,11 +61,11 @@ a:hover {
     transition: .5s ease;
 }
 .tab-group li a:hover {
-    background: #179b77;
+    background: #f5ca23;
     color: #ffffff;
 }
 .tab-group .active a {
-    background: #1ab188;
+    background: #f5ca23;
     color: #ffffff;
 }
 
@@ -85,10 +91,11 @@ label {
     -webkit-backface-visibility: hidden;
     pointer-events: none;
     font-size: 22px;
+    font-family: Oswald;
 }
 label .req {
     margin: 2px;
-    color: #1ab188;
+    color: #fcbe07;
 }
 
 label.active {
@@ -121,7 +128,7 @@ input, textarea {
 }
 input:focus, textarea:focus {
     outline: 0;
-    border-color: #1ab188;
+    border-color: #fffa3d;
 }
 
 textarea {
@@ -157,14 +164,15 @@ textarea {
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: .1em;
-    background: #1ab188;
+    background: #f5ca23;
     color: #ffffff;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
     -webkit-appearance: none;
 }
 .button:hover, .button:focus {
-    background: #179b77;
+    background: #fcbe07;
+    cursor: pointer;
 }
 
 .button-block {
