--- a/app/Resources/views/base2.html.twig
+++ b/app/Resources/views/base2.html.twig
@@ -8,6 +8,7 @@
 
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/bootstrap.min.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('assets/bootstrap-select.min.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/animate.min.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/owl.theme.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/owl.carousel.css') }}"/>
@@ -18,19 +19,22 @@
 
     {% block canonical_meta %}{% endblock %}
 </head>
-{% block body %}
+<body>
+    {% block body %}
 
-                    {% block content %}
+        {% block content %}
 
-                    {% endblock %}
+        {% endblock %}
 
-                {% endblock %}
+    {% endblock %}
+</body>
 
 {% block javascripts %}
     <script src="{{ asset('assets/jquery.min.js') }}"></script>
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
     <script src="{{ asset('assets/angular.min.js') }}"></script>
     <script src="{{ asset('assets/ng-infinite-scroll.js') }}"></script>
+    <script src="{{ asset('assets/bootstrap-select.min.js.js') }}"></script>
     <script src="{{ asset('js/smoothscroll.js') }}"></script>
     <script src="{{ asset('js/jquery.nav.js') }}"></script>
     <script src="{{ asset('js/jquery.parallax.js') }}"></script>
@@ -45,6 +49,9 @@
         $(document).ready(function(){
             $('[data-toggle="popover"]').popover();
         });
+    </script>
+    <script>
+        $('select option[value="all"]').attr('selected','selected');
     </script>
 {% endblock %}
 
