--- a/src/AppBundle/Resources/views/Home/indexShow.html.twig
+++ b/src/AppBundle/Resources/views/Home/indexShow.html.twig
@@ -8,12 +8,10 @@
 
             <div class="col-md-12 col-sm-12">
                 <h1 class="home wow fadeInDown"> HOME <span class="homeSpan">COACH</span></h1>
-                <a href="/login" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.4s">PRISIJUNGTI</a>
-                <a href="/register" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">REGISTRUOTIS</a>
                 {% if app.user is not null %}
                     <a href="{{ path('app.createRegime') }}" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">SUKURTI PROGRAMĄ</a>
                 {% else %}
-                    <a class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s" title="Prisijunkite!" data-toggle="popover" data-content="Norėdami kurti programas turite turėti paskyrą." data-placement="bottom" data-trigger="hover"> SUKURTI PROGRAMĄ </a>
+                    <a href="/login" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.4s">PRISIJUNGTI</a>
                 {% endif %}
                 <a href="#mainSection" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.6s">RODYTI PROGRAMAS</a>
             </div>
@@ -25,11 +23,11 @@
 <div class="container" id="mainSection">
     <div ng-app="regimeApp" ng-controller="regimesController">
 
-        <div>
-            <input type="text" id="search">
+        <div style="margin-top:45px;">
+            <input type="text" placeholder="Paieška" id="search">
 
             <select id="selectBox" ng-model="diffucultySelected" ng-change="difficultyChange()">
-                <option value="all" selected="selected"> Visos </option>
+                <option value="all"> Visos </option>
                 <option value="5"> Labai sunki </option>
                 <option value="4"> Sunki </option>
                 <option value="3"> Vidutinė </option>
@@ -41,10 +39,11 @@
             <input type="button" id="ratingButton" value="Pagal reitinga" ng-click="sortByRatings()">  </input>
         </div>
         <div infinite-scroll='loadMore()' infinite-scroll-distance='1'>
-            <div class="row no-collapse-1">
+            <div class="row no-collapse-1 noOverflow">
                 <section class="col-md-4" ng-repeat="regime in regimes">
                     <div class="box">
-                        <h2 style="font-family: Oswald"><a href="regimes/{[{ regime.id }]}"> {[{ regime.title }]}</a> <span ng-if="regime.rating" class="infoStar">{[{ regime.rating }]} &starf;</span> </h2>
+                        <h3><span ng-if="regime.rating" class="infoStar">{[{ regime.rating }]} &starf;</span></h3>
+                        <h2 style="font-family: Oswald"><a href="regimes/{[{ regime.id }]}"> {[{ regime.title }]}</a> </h2>
                         <p> Autorius: <a href="showProfile/{[{ regime.creator_id }]}"> {[{ regime.username }]}</a></p>
                         <p> {[{ regime.data_created }]}</p>
                         <p class="description">{[{ regime.description | limitTo:150 }]}</p>
@@ -68,16 +67,19 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right main-navigation">
-                    <li><a href="/login" class="smoothScroll">PRISIJUNGTI</a></li>
-                    <li><a href="/register" class="smoothScroll">REGISTRUOTIS</a></li>
                     {% if app.user is not null %}
                         <li><a href="{{ path('app.createRegime') }}" class="smoothScroll">SUKURTI PROGRAMĄ</a></li>
+                        <li><span class="loginInfo"> {{ 'layout.logged_in_as' | trans({'%username%': app.user.username}, 'FOSUserBundle') }} </span> </li>
+                            <li> <a href="{{ path('fos_user_security_logout') }}">
+                            <span class="glyphicon glyphicon-off"></span>
+                            {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                        </a></li>
+                    {% else %}
+                        <li><a href="/login" class="smoothScroll">PRISIJUNGTI</a></li>
                     {% endif %}
                 </ul>
             </div>
 
         </div>
     </section>
-
-
 {% endblock %}
